<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/discover"
            android:layout_width="200dp"
            android:layout_height="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"
            android:src="@drawable/discover"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            app:startIconDrawable="@drawable/ic_baseline_search_24"
            app:layout_constraintTop_toBottomOf="@+id/discover">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/hint_search_string"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions|textCapSentences"
                android:textColor="@color/light_grey"
                android:fontFamily="@font/reemkufi"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="Google Custom Search" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_layout"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:text="@string/top_genres"
            android:fontFamily="@font/reemkufi"
            android:layout_marginLeft="24dp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="#E8A255"/>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/genre1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/Widget.MaterialComponents.Button.TextButton"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/title_genre"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:gravity="left"
           android:text="@string/action"
           android:textSize="@dimen/abc_text_size_menu_material"
           android:fontFamily="@font/reemkufi"
           android:layout_marginLeft="24dp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre1"
            android:background="@color/grey"
            android:layout_marginLeft="24dp" />

        <com.google.android.material.button.MaterialButton
           android:id="@+id/genre2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/Widget.MaterialComponents.Button.TextButton"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/divider1"
           android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
           android:gravity="left"
           android:text="@string/drama"
           android:textSize="@dimen/abc_text_size_menu_material"
           android:fontFamily="@font/reemkufi"
           android:layout_marginLeft="24dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre2"
            android:background="@color/grey"
            android:layout_marginLeft="24dp" />

        <com.google.android.material.button.MaterialButton
           android:id="@+id/genre3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/Widget.MaterialComponents.Button.TextButton"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/divider2"
           android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
           android:gravity="left"
           android:text="@string/romance"
           android:textSize="@dimen/abc_text_size_menu_material"
           android:fontFamily="@font/reemkufi"
           android:layout_marginLeft="24dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre3"
            android:background="@color/grey"
            android:layout_marginLeft="24dp" />

        <com.google.android.material.button.MaterialButton
           android:id="@+id/genre4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/Widget.MaterialComponents.Button.TextButton"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/divider3"
           android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
           android:gravity="left"
           android:text="@string/comedy"
           android:textSize="@dimen/abc_text_size_menu_material"
           android:fontFamily="@font/reemkufi"
           android:layout_marginLeft="24dp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre4"
            android:background="@color/grey"
            android:layout_marginLeft="24dp" />

        <com.google.android.material.button.MaterialButton
           android:id="@+id/genre5"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/Widget.MaterialComponents.Button.TextButton"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/divider4"
           android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
           android:gravity="left"
           android:text="@string/horror"
           android:textSize="@dimen/abc_text_size_menu_material"
           android:fontFamily="@font/reemkufi"
           android:layout_marginLeft="24dp" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre5"
            android:background="@color/grey"
            android:layout_marginLeft="24dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_watchlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider5"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/my_watchlist"
            android:fontFamily="@font/reemkufi"
            android:layout_marginLeft="24dp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="#E8A255"/>

        <!--<androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/title_watchlist">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="24dp"
                android:scrollbars="none"
                android:layout_marginLeft="24dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:src="@drawable/cleaning"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:src="@drawable/cleaning"/>


            </HorizontalScrollView>


        </androidx.cardview.widget.CardView>-->

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/title_watchlist">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                tools:listitem="@layout/poster"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />



        </LinearLayout>

        </HorizontalScrollView>






        
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>