<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:maxHeight="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/movie_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/movie_poster"
                android:src="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/textview_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:maxHeight="20dp"
                android:text="@string/action"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/textview_title"
                android:layout_marginLeft="16dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bookmark_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_title"
                android:src="@drawable/ic_baseline_bookmark_24"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="2012 . 2h 32m"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/textview_genre"
                android:layout_marginLeft="16dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>